# moyAI

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs  config.example.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
assets/prompts/: collaboration_plan.md  compaction.md  multi_agent_explicit.md  multi_agent_proactive.md  multi_agent_root.md  permission_guardian.md  permission_reviewer.md  profile_default.md  profile_qwen_coder.md  prompt-enhancer.md  sub_agent.md  system.md
docs/design/: desktop-feature-parity-matrix.md
docs/release/: v0.8.0.md  v1.0.0.md
docs/testing/provider-profiles/: lm-studio-qwen3.6-35b-a3b.toml
docs/user/: getting-started.md
migrations/: V10__session_state_docs_route_contract.sql  V11__request_diagnostics.sql  V12__session_state_closeout_ready_rename.sql  V13__message_parts_image.sql  V14__harness_engine.sql  V15__session_state_contract_refs.sql  V16__protocol_event_store.sql  V17__session_state_typed_verification_evidence.sql  V18__sessions_cancelled_status.sql  V19__session_state_token_accounting.sql  V1__init.sql  V20__protocol_item_append_order.sql  V21__sessions_archive.sql  V22__sessions_access_mode.sql  V23__sessions_memory_mode.sql  V24__sessions_model_parameters.sql  V25__thread_goals.sql  V26__sessions_active_run_id.sql  V27__protocol_turn_sequence_allocators.sql  V28__sessions_active_turn_id.sql  V29__sessions_active_run_lease.sql  V2__indexes.sql  V30__session_spawn_edges.sql  V31__tool_call_declined_cancelled_status.sql  V32__drop_legacy_planner_authority.sql  V33__canonical_protocol_storage.sql  V34__drop_sessions_memory_mode.sql  V35__drop_sessions_awaiting_user_status.sql  V36__drop_legacy_reasoning_items.sql  V37__raw_tool_call_history.sql  V38__remove_auto_review_access_mode.sql  V39__terminal_outcome_cutover.sql  V3__todos.sql  V40__flatten_session_spawn_edges.sql  V41__indexed_collaboration_mode_lookup.sql  V42__typed_history_scope.sql  V43__indexed_internal_file_ownership.sql  V44__unique_turn_terminal.sql  V45__restore_auto_review_access_mode.sql  V46__codex_compaction_checkpoint.sql  (+6 more)
scripts/: package-release.ps1
src/: error.rs  lib.rs  main.rs
src/agent/: assistant_message_lifecycle.rs  compaction.rs  completion_guard.rs  content_shape_contract.rs  context_manager.rs  contract_reconciliation.rs  docs_semantic_contract.rs  edit_recovery.rs  event.rs  goal_steering.rs  grounding_evidence.rs  language_evidence.rs  lifecycle_guard.rs  lifecycle_kernel.rs  loop_impl.rs  mod.rs  mode.rs  prompt.rs  prompt_assets.rs  public_command_contract.rs  repair_lane.rs  staged_task_docs.rs  state.rs  state_lifecycle.rs  step_context.rs  terminal_accounting.rs  tool_orchestrator.rs  tool_result_classification.rs  turn_context.rs  turn_decision.rs  verification.rs
src/app/: agent_runtime.rs  agent_runtime_tests.rs  bootstrap.rs  command.rs  mod.rs  run_service.rs  session_title.rs
src/cli/: mod.rs  parse.rs  prompt.rs  render.rs  terminal.rs
src/config/: loader.rs  merge.rs  mod.rs  model.rs  permission_profile_catalog.rs  turn.rs
src/context/: context_window.rs  current_time.rs  mod.rs  world_state.rs
src/desktop/: app.rs  args.rs  artifact_projection.rs  async_ops.rs  bridge.rs  composer_state.rs  mod.rs  models.rs  navigation.rs  open_session.rs  preferences.rs  provider_config_state.rs  query.rs  single_instance.rs  startup.rs  state.rs  tauri_app.rs  view_model.rs  view_state.rs  web_model.rs
src/docling/: mod.rs
src/edit/: change_tracker.rs  formatter.rs  mod.rs  patch.rs  safety.rs
src/harness/: artifact.rs  artifact_store.rs  contract.rs  contract_store.rs  event.rs  event_store.rs  gate_store.rs  ids.rs  manual_st.rs  mod.rs  preflight.rs  replay.rs  report.rs  report_store.rs  run_store.rs  runtime_writer.rs  schema.rs  stored_artifact.rs
src/harness/gate/: artifact.rs  e2e.rs  mod.rs  scenario.rs  schema.rs  state_transition.rs  tool_dispatch.rs
src/llm/: catalog.rs  contract.rs  dto.rs  image_validation.rs  mod.rs  model_policy.rs  model_probe.rs  openai_compat.rs  provider.rs  request_diagnostics.rs  responses.rs  turn_session.rs
src/mcp/: mod.rs
src/protocol/: control.rs  legacy_control.rs  mod.rs  projection.rs  recording.rs  runtime.rs  store.rs
src/runtime/: active_run.rs  agent_control.rs  cancel.rs  clock.rs  event_bus.rs  live_config.rs  mod.rs  run_process_lease.rs
src/session/: ids.rs  markdown.rs  mod.rs  model.rs  repository.rs  service.rs  state.rs  todo.rs  transcript.rs
src/skill/: mod.rs
src/storage/: change_repo.rs  migration.rs  mod.rs  project_repo.rs  session_repo.rs  sqlite.rs
src/tool/: apply_patch.rs  context.rs  contract.rs  current_time.rs  docling_convert.rs  goal.rs  inspect_directory.rs  internal_output.rs  mcp_call.rs  mod.rs  multi_agent.rs  os_sandbox.rs  permission_guardian.rs  permission_review.rs  process.rs  read.rs  registry.rs  sandbox_process.rs  search.rs  shell.rs  skill.rs  spec_plan.rs  text_encoding.rs  todo_write.rs  truncate.rs  update_plan.rs  write.rs  write_support.rs
src/tui/: app.rs  config_editor.rs  mod.rs  prompt_enhance.rs  query.rs  reducer.rs  state.rs
src/workspace/: discovery.rs  ignore.rs  mod.rs  path_guard.rs  project.rs  review.rs  special_paths.rs  traversal.rs
tests/: codex_style_preflight.rs  docs_testing_authority.rs  manual_st_route_runner.rs  manual_st_spec_authority.rs  model_availability_cli.rs  module_responsibility.rs  testing_metadata_authority.rs
tests/manual_ST/: README.md
tests/manual_ST/case1/: scenario_contract.json  scenario_contract.md  spec.md
tests/manual_ST/case2/: scenario_contract.json  (+2 more)
ui/desktop/: app-window.slint
ui/desktop-web/: index.html
(+56 files in other folders)
