[package]
name = "moyai"
version = "0.8.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[features]
default = ["tauri-desktop"]
tauri-desktop = [
    "dep:tauri",
    "tauri/custom-protocol",
    "tauri/protocol-asset",
    "tauri/tray-icon",
    "dep:tauri-build",
    "dep:rfd",
    "dep:tauri-plugin-single-instance",
]

[lib]
name = "moyai"
path = "src/lib.rs"

[[bin]]
name = "moyai-desktop"
path = "src/bin/moyai-desktop.rs"
required-features = ["tauri-desktop"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
camino = { version = "1.2.1", features = ["serde1"] }
chrono = "0.4.44"
clap = { version = "4.5.39", features = ["derive", "env"] }
content_inspector = "0.2.4"
crossterm = "0.28.1"
directories-next = "2.0.0"
encoding_rs = "0.8.35"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
fs2 = "0.4.3"
globset = "0.4.16"
httpdate = "1.0.3"
ignore = "0.4.24"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
rfd = { version = "0.15.4", optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
similar = "2.7.0"
tauri = { version = "2.9.2", optional = true, features = ["protocol-asset"] }
tauri-plugin-single-instance = { version = "2", optional = true }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "time", "sync", "io-util"] }
tokio-util = "0.7.16"
toml = "0.8.23"
tui-textarea = "0.7.0"
ulid = { version = "1.2.1", features = ["serde"] }
unicode-width = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Wdk_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"

[dev-dependencies]
assert_cmd = "2.1.1"
axum = { version = "0.8.6", features = ["multipart"] }

[build-dependencies]
tauri-build = { version = "2.5.1", optional = true }
